@@ -39,6 +39,7 @@ struct
     Options.ocamlopt   := ocamlfind & A"ocamlopt";
     Options.ocamldep   := ocamlfind & A"ocamldep";
     Options.ocamldoc   := ocamlfind & A"ocamldoc";
+    (*OCAMLDOC-g Options.ocamldoc   := S[A"/home/yoric/tmp/ocaml-community/bin/ocamlrun"; A "-b"; A"/home/yoric/tmp/ocaml-community/bin/ocamldoc"];*)
     Options.ocamlmktop := ocamlfind & A"ocamlmktop"
 
   let after_rules () =
@@ -93,8 +94,19 @@ struct
 				A "-g"; A "odoc_tags.cmo"; 
 			        A "-t"; A "OCaml Batteries Included" ;
 				A "-intro"; A "../build/intro.text"]
-
-
+(*OCAMLDOC -g    flag ["ocaml"; "doc"]   & S[A "-i"; A "/tmp/";
+				A "-g"; A "odoc_tags.cmo"; 
+			        A "-t"; A "OCaml Batteries Included" ;
+				A "-intro"; A "../build/intro.text";
+(*			        A "-I"; A "/home/yoric/tmp/ocaml-community/lib/ocaml";
+			        A "-I"; A "/home/yoric/tmp/ocaml-community/lib/ocaml/threads";*)
+				A "-I"; A "/home/yoric/usr/local/lib/ocaml";
+			        A "-I"; A "/home/yoric/usr/local/godi/lib/ocaml/std-lib/threads"; 
+			        A "-I"; A "/home/yoric/usr/local/godi/lib/ocaml/pkg-lib/sexplib";
+			        A "-I"; A "/home/yoric/usr/local/godi/lib/ocaml/pkg-lib/camomile";
+			        A "-I"; A "/home/yoric/usr/local/godi/lib/ocaml/pkg-lib/camlzip" ;
+			        A "-I"; A "/home/yoric/usr/local/godi/lib/ocaml/pkg-lib/netstring"]
+*)
 (*  let after_rules () = 
     dep  ["ocaml"; "doc"]   & ["build/odoc_generator_batlib.cmo"];
     flag ["ocaml"; "doc"]   & S[A "-i"; A "_build/build"; 
