@@ -1,3 +1,13 @@
+2009-01-06  David Teller  <David.Teller@univ-orleans.fr>
+
+	* build/odoc_tags.ml: [generate_element_index_by_topic] now prints exception in case of error
+
+	* build/odoc_tags.ml: [modules_by_topics] now returns an empty list instead of [Not_found]
+
+	* build/odoc_tags.ml: in initializer, removed custom tag "topic"
+
+	* build/odoc_tags.ml: in [sort_by_topics], replaced "topic" with "topic"/"{topic"
+
 2009-01-05  David Teller  <David.Teller@univ-orleans.fr>
 
 	* src/core/extlib/extStr.mli: created
